--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     			if (i % 20 == 1 && i != 1) {
         		mytable += "</tr><tr>";
     			}
-    			mytable += "<td></td>";
+    			mytable += "<td>" + Math.floor(Math.random() * 4) + "</td>";
 		}
 
 mytable += "</tr></tbody></table>";
