--- a/index.html
+++ b/index.html
@@ -2,12 +2,35 @@
 <html lang="en">
 	<head>
 <style>
+html, body
+{
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+	
+.box {
+  width: 100%;
+  height: 100%;
+  background: red;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-transition: background-color 2s ease-out;
+  -moz-transition: background-color 2s ease-out;
+  -o-transition: background-color 2s ease-out;
+  transition: background-color 2s ease-out;
+}
 
+.box:hover {
+  background-color: green;
+  cursor: pointer;
+}
 
 </style>
 </head>
 <body>
-	
+<div class="box"></div>
 	
 </body>
 </html>
