--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@ html, body
   margin-top: 0px;
   margin-left: auto;
   margin-right: auto;
-  -webkit-transition: background-color 2s ease-out;
-  -moz-transition: background-color 2s ease-out;
-  -o-transition: background-color 2s ease-out;
-  transition: background-color 2s ease-out;
+  -webkit-transition: background-color 30s ease-out;
+  -moz-transition: background-color 30s ease-out;
+  -o-transition: background-color 30s ease-out;
+  transition: background-color 30s ease-out;
 }
 
 .box:hover {
-  background-color: green;
+  background-color: ywllow;
   cursor: pointer;
 }
 
