--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     margin-top: 0px;
     margin-left: auto;
     margin-right: auto;
-    -webkit-transition: background-color 30s ease-in-out;
-    -moz-transition: background-color 30s ease-in-out;
-    -o-transition: background-color 30s ease-in-out;
-    -khtml-transition: background-color 30s ease-in-out;
-    transition: background-color 30s ease-in-out;
+    -webkit-transition: background-color 5s ease-in-out;
+    -moz-transition: background-color 5s ease-in-out;
+    -o-transition: background-color 5s ease-in-out;
+    -khtml-transition: background-color 5s ease-in-out;
+    transition: background-color 5s ease-in-out;
 }
     </style>
     </head>
@@ -41,7 +41,7 @@
             }, time);
     }
     $(window).load(function () {
-        changeColor(".container", ["green", "yellow", "blue", "red"], 30000);
+        changeColor(".container", ["red", "orange", "yellow", "green", "teal", "blue", "purple"], 5000);
     });
 });
     </script>
