--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html><head>
+    <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <style>
     html, body
 {
