--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ button.addEventListener('click', function(e) {
   
   <p id="msg"></p>
 
-  <input type="text" name="speech-msg" id="speech-msg" x-webkit-speech>
+  <input value="the boss will be available in 30 seconds" type="text" name="speech-msg" id="speech-msg" x-webkit-speech>
 
 	<div class="option">
 		<label for="voice">Voice</label>
