--- a/index.html
+++ b/index.html
@@ -1,136 +1,52 @@
-<!DOCTYPE html>
-<html lang="en" >
-
-<head>
-  <meta charset="UTF-8">
-  <title>Web Speech Synthesis Demo</title>
-  
-	
-</head>
-
+<html><head>
+    <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <style>
+    html, body
+{
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+        .container {
+    background-color: red;
+    height:100%;
+    width: 100%;
+    margin-top: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    -webkit-transition: background-color 5s ease-in-out;
+    -moz-transition: background-color 5s ease-in-out;
+    -o-transition: background-color 5s ease-in-out;
+    -khtml-transition: background-color 5s ease-in-out;
+    transition: background-color 5s ease-in-out;
+}
+    </style>
+    </head>
 <body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<div class="container" style="background-color: black;"></div>
+    <script type="text/javascript">
+jQuery(function ($) {
+    var curCol = 0
+    function changeColor(selector, colors, time) {
+        /* Params:
+         * selector: string,
+         * colors: array of color strings,
+         * every: integer (in mili-seconds)
+         */
+         
+        
+        var timer = setInterval(function () {
+             changeColor(".container", ["red", "orange", "yellow", "green", "teal", "blue", "purple"], 5000);   
+            }, time);
+        if (curCol === colors.length) curCol = 0;
+        $(selector).css("background-color", colors[curCol]);
+        curCol++;
+    }
+    $(window).load(function () {
+        changeColor(".container", ["red", "orange", "yellow", "green", "teal", "blue", "purple"], 5000);
+    });
+});
+    </script>
 
-  <div id="page-wrapper">
-  
-  <p id="msg"></p>
-
-  <input value="the boss will be available in 30 seconds" type="text" name="speech-msg" id="speech-msg" x-webkit-speech>
-
-	<div class="option">
-		<label for="voice">Voice</label>
-		<select name="voice" id="voice"></select>
-	</div>
-	<div class="option">
-		<label for="volume">Volume</label>
-		<input type="range" min="0" max="1" step="0.1" name="volume" id="volume" value="1">
-	</div>
-	<div class="option">
-		<label for="pitch">Pitch</label>
-		<input type="range" min="0" max="2" step="0.1" name="pitch" id="pitch" value="1">
-	</div>
-
-	<button id="speak">Speak</button>
-
-</div>
-  
-  
-
-    <script>
-
-		/*
- * Check for browser support
- */
-		var supportMsg = document.getElementById('msg');
-
-		if ('speechSynthesis' in window) {
-			supportMsg.innerHTML = 'Your browser <strong>supports</strong> speech synthesis.';
-		} else {
-			supportMsg.innerHTML = 'Sorry your browser <strong>does not support</strong> speech synthesis.<br>Try this in <a href="https://www.google.co.uk/intl/en/chrome/browser/canary.html">Chrome Canary</a>.';
-			supportMsg.classList.add('not-supported');
-		}
-
-
-		// Get the 'speak' button
-		var button = document.getElementById('speak');
-
-		// Get the text input element.
-		var speechMsgInput = document.getElementById('speech-msg');
-
-		// Get the voice select element.
-		var voiceSelect = document.getElementById('voice');
-
-		// Get the attribute controls.
-		var volumeInput = document.getElementById('volume');
-		var rateInput = document.getElementById('rate');
-		var pitchInput = document.getElementById('pitch');
-
-
-		// Fetch the list of voices and populate the voice options.
-		function loadVoices() {
-			// Fetch the available voices.
-			var voices = speechSynthesis.getVoices();
-
-			// Loop through each of the voices.
-			voices.forEach(function (voice, i) {
-				// Create a new option element.
-				var option = document.createElement('option');
-
-				// Set the options value and text.
-				option.value = voice.name;
-				option.innerHTML = voice.name;
-
-				// Add the option to the voice selector.
-				voiceSelect.appendChild(option);
-			});
-			
-			voiceSelect.value = "Google UK English Female";
-		}
-
-		// Execute loadVoices.
-		loadVoices();
-
-		
-
-		// Chrome loads voices asynchronously.
-		window.speechSynthesis.onvoiceschanged = function (e) {
-			loadVoices();
-		};
-
-
-		// Create a new utterance for the specified text and add it to
-		// the queue.
-		function speak(text) {
-			// Create a new instance of SpeechSynthesisUtterance.
-			var msg = new SpeechSynthesisUtterance();
-
-			// Set the text.
-			msg.text = text;
-
-			// Set the attributes.
-			msg.volume = parseFloat(volumeInput.value);
-			msg.pitch = parseFloat(pitchInput.value);
-
-			// If a voice has been selected, find the voice and set the
-			// utterance instance's voice attribute.
-			if (voiceSelect.value) {
-				msg.voice = speechSynthesis.getVoices().filter(function (voice) { return voice.name == voiceSelect.value; })[0];
-			}
-
-			// Queue this utterance.
-			window.speechSynthesis.speak(msg);
-		}
-
-
-		// Set up an event listener for when the 'speak' button is clicked.
-		button.addEventListener('click', function (e) {
-			if (speechMsgInput.value.length > 0) {
-				speak(speechMsgInput.value);
-			}
-		});
-
-	</script>
-
-
-</body>
-
-</html>
+</body></html>
