--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ label {
    <p>Enter some text in the input below and press return  or the "play" button to hear it. change voices using the dropdown menu.</p>
     
     <form>
-    <input type="text" class="txt" value="Get ready, the boss will be available in 30 seconds.">
+    <input type="text" class="txt" value="Give me a try!">
     <div>
       <label for="volume">Volume</label><input type="range" min="0" max="1" value="1" step="0.1" id="volume">
       <div class="volume-value">1</div>
