--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ function onStart() {
 	}
 
 	function myTimeout1() {
-		inputTxt.value = "this is when i'll tell you the camps are ready.";
+		inputTxt.value = "this is when i'll tell you that the camps are ready.";
 		speak();
 	}
 	function myTimeout2() {
