--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@ label {
     <select>
 
     </select>
-    
+    <div class="controls">
+-      <button id="play" type="submit">Play Custom Text</button>
+-    </div>
+	    
     </form>
 
   
