--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@ label {
 
     </select>
     <div class="controls">
--      <button id="play" type="submit">Play Custom Text</button>
--    </div>
+      <button id="play" type="submit">Play Custom Text</button>
+    </div>
 	    
     </form>
 
